test/compile-fail/scope/use-no-name-root-path/expected.txt
error: unresolved import `c`
 --> top.rhdl:6:14
  |
6 |         use ::c::d;
  |               ^ no `c` crate in root
